--- a/samples/metaapp/src/main/res/layout/demo_fragment_layout.xml
+++ b/samples/metaapp/src/main/res/layout/demo_fragment_layout.xml
@@ -1,42 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+
+<com.sourcepointmeta.metaapp.ui.component.DemoFragmentLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:colorBackground">
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/app_bar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:elevation="0dp">
+    <TextView
+            android:id="@+id/campaign_name_fr"
+            tools:text="Campaign Enviroment"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:textAppearance="?attr/textAppearanceHeadline5"/>
 
-            <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/tool_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:title="@string/app_name"
-                    app:navigationIcon="@drawable/ic_home_black_24dp"/>
+    <Button
+            android:id="@+id/review_consents_gdpr_fr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="148dp"
+            android:layout_marginLeft="148dp"
+            android:layout_marginEnd="148dp"
+            android:layout_marginRight="148dp"
+            android:layout_marginBottom="50dp"
+            android:text="@string/review_consents"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.514"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.932"/>
 
-        </com.google.android.material.appbar.AppBarLayout>
+    <Button
+            android:id="@+id/review_consents_ccpa_fr"
+            android:text="@string/review_consents_ccpa"
+            app:layout_constraintStart_toStartOf="@id/review_consents_gdpr_fr"
+            app:layout_constraintEnd_toEndOf="@id/review_consents_gdpr_fr"
+            app:layout_constraintBottom_toTopOf="@id/review_consents_gdpr_fr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/demo_list"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:visibility="visible"
-                tools:listitem="@layout/item_action_demo"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/app_bar"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</com.sourcepointmeta.metaapp.ui.component.DemoFragmentLayout>
