--- a/samples/metaapp/src/main/res/layout/main_activity.xml
+++ b/samples/metaapp/src/main/res/layout/main_activity.xml
@@ -4,5 +4,4 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"/>
+        android:layout_height="match_parent"/>
