--- a/samples/metaapp/src/main/res/values-night/themes.xml
+++ b/samples/metaapp/src/main/res/values-night/themes.xml
@@ -30,6 +30,10 @@
         <item name="colorOnBackground">@color/white_50</item>
         <item name="colorOnSurface">@color/white_50</item>
         <item name="colorOnError">@color/black_900</item>
+
+        <item name="colorOddItem">@color/black_400</item>
+        <item name="colorEvenItem">@color/black_600</item>
+
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
         <item name="android:windowLightNavigationBar" tools:ignore="NewApi">false</item>
     </style>
