--- a/samples/metaapp/src/main/res/values/themes.xml
+++ b/samples/metaapp/src/main/res/values/themes.xml
@@ -41,6 +41,10 @@
         <item name="colorOnBackground">@color/black_900</item>
         <item name="colorOnSurface">@color/black_900</item>
         <item name="colorOnError">@color/white_50</item>
+
+        <item name="colorOddItem">@color/black_50</item>
+        <item name="colorEvenItem">@color/white_50</item>
+
         <!--Material type attributes-->
         <item name="textAppearanceHeadline1">@style/TextAppearance.MyTheme.Headline1</item>
         <item name="textAppearanceHeadline2">@style/TextAppearance.MyTheme.Headline2</item>
@@ -48,6 +52,7 @@
         <item name="textAppearanceHeadline4">@style/TextAppearance.MyTheme.Headline4</item>
         <item name="textAppearanceHeadline5">@style/TextAppearance.MyTheme.Headline5</item>
         <item name="textAppearanceHeadline6">@style/TextAppearance.MyTheme.Headline6</item>
+        <item name="textAppearanceHeadline7">@style/TextAppearance.MyTheme.Headline7</item>
         <item name="textAppearanceSubtitle1">@style/TextAppearance.MyTheme.Subtitle1</item>
         <item name="textAppearanceSubtitle2">@style/TextAppearance.MyTheme.Subtitle2</item>
         <item name="textAppearanceBody1">@style/TextAppearance.MyTheme.Body1</item>
